--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,51 +1,47 @@
 /* style.css */
 
 body {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode',
-    Geneva, Verdana, sans-serif;
-    }
-    
-
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  background-color: aquamarine;
+}
 
 .header {
-    height: 8em;
-    padding: 5em;
-    font-size: 2em;
-    background-image: url("../imgs/fondo.jpg");
-    background-size: cover;
-    background-position: center;
-    }
+  height: 8em;
+  padding: 5em;
+  font-size: 2em;
+  background-image: url("../imgs/fondo.jpg");
+  background-size: cover;
+  background-position: center;
+}
 
 .header h1 {
-    margin: 0px;
-    }
+  margin: 0px;
+}
 
 .header h1 {
-    margin: 0px;
-    font-weight: 400;
-    }
+  margin: 0px;
+  font-weight: 400;
+}
 
 .products {
-    width: 80%;
-    margin: auto;
-    }
-.products td {
-    width: 50%;
-    padding: 2em;
-    }
-.products img {
-    width: 100%;
-    border: solid 1px #ddd;
-    }
-
-.footer{
-    height: 3em;
-    line-height: 3em;
-    background-color: rgb(185, 112, 41);
-    color: white;
-    text-align: center;
-    font-weight: 900;
+  width: 80%;
+  margin: auto;
 }
-        
-        
-        
+.products td {
+  width: 50%;
+  padding: 2em;
+}
+.products img {
+  width: 100%;
+  border: solid 1px #ddd;
+}
+
+.footer {
+  height: 3em;
+  line-height: 3em;
+  background-color: rgb(185, 112, 41);
+  color: white;
+  text-align: center;
+  font-weight: 900;
+}
